<resources>
    <string name="app_name">APP MOviles</string>
    <string name="fantasia">Fantasia</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="actividades">Actividades</string>
    <string name="perfil">Perfil</string>
    <string name="aciertos_regalo">10/10</string>
    <string name="aciertos_fallida">4/10</string>
</resources>