<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fantasia">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/buttonRegresar"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:background="@drawable/angleleftsolid416"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fantasia"
            android:background="@color/design_default_color_on_primary"
            android:textSize="30sp"
            android:textAlignment="center"
            android:padding="8dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/txtSubTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Todas las historias"
        android:background="@color/design_default_color_on_primary"
        android:textSize="25sp"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

    </GridLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonInicio"
            android:layout_width="60dp"

            android:layout_height="60dp"
            android:background="@drawable/inicio"
            app:backgroundTint="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonBuscar"
            android:layout_width="60dp"

            android:layout_height="60dp"
            android:background="@drawable/buscar1"
            app:backgroundTint="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonbiblioteca"

            android:layout_height="60dp"     android:layout_width="60dp"
            android:background="@drawable/bibliotecaselect"
            app:backgroundTint="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biblioteca"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonActividades"
            android:layout_width="60dp"

            android:layout_height="60dp"
            android:background="@drawable/actividades"
            app:backgroundTint="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actividades"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonPerfil"
            android:layout_width="60dp"

            android:layout_height="60dp"
            android:background="@drawable/Perfil192"
            app:backgroundTint="@null"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>

</LinearLayout>
<!--

    <TableLayout
        android:layout_height="match_parent"
        android:collapseColumns="5"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
       android:layout_gravity="center">
        <TableRow>
            <Button
                android:id="@+id/buttonInicio"
                android:layout_width="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inicio"
                app:backgroundTint="@null"
              />

            <Button
                android:id="@+id/buttonBuscar"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buscar1"
                app:backgroundTint="@null"
               />
            <Button
                android:id="@+id/buttonbiblioteca"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bibliotecaselect"
                app:backgroundTint="@null"
             />
            <Button
                android:id="@+id/buttonActividades"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/actividades"
                app:backgroundTint="@null"
                />
            <Button
                android:id="@+id/buttonPerfil"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/Perfil192"

                app:backgroundTint="@null"

                />


        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biblioteca"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actividades"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfil"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>
!-->
